# django-onfido

./: .flake8  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  README.rst  apps.py  pyproject.toml  requirements.txt  settings.py  setup.py  tox.ini  urls.py
.github/workflows/: tox.yml
django_onfido/: __init__.py  admin.py  api.py  apps.py  helpers.py  models.py  settings.py  signals.py  tests.py  urls.py  views.py
django_onfido/db/: __init__.py  fields.py
django_onfido/migrations/: 0001_initial.py
onfido/: __init__.py  admin.py  api.py  apps.py  compat.py  data.py  decorators.py  helpers.py  models.py  settings.py  signals.py  urls.py  views.py
onfido/data/: supported_applicant_countries.json
onfido/db/: __init__.py  fields.py
onfido/management/commands/: onfido_sync.py
onfido/migrations/: 0001_initial.py  0002_auto_20161019_1037.py  0002_event.py  0003_auto_20161019_1038.py  0003_auto_20161023_1455.py  0004_auto_20161019_1259.py  0004_auto_20161023_1648.py  0005_auto_20161019_1312.py  0005_remove_event_user.py  0006_rename_event_fields.py  0007_rename_onfido_id_verbose_name.py  0008_auto_20161028_0815.py  0008_rename_event_created_at.py  0009_add_is_clear_field.py  0009_auto_20161114_1933.py  0010_auto_20161115_1050.py  0010_convert_raw_fields_to_jsonb.py  0011_add_indexes_to_status_fields.py  0012_add_event_received_at_timestamp.py  0013_populate_received_at_20170112_1811.py  0013_update_report_choices.py  0013_update_report_type_choices.py  0014_remove_null_on_event_received_at.py  0014_update_status_result_choices.py  0015_update_check_type_field.py  0016_update_applicant_user_field.py  0017_auto_20210304_0241.py  0018_remove_isclear_from_basestatus_model.py  0019_add_new_status_choices.py
onfido/models/: __init__.py  applicant.py  base.py  check.py  event.py  report.py
onfido/tests/: __init__.py  test_admin.py  test_api.py  test_decorators.py  test_helpers.py  test_migrations.py  test_models.py  test_settings.py  test_views.py
onfido/tests/test_files/: applicant.json  check.json  check__form_completed.json  check__form_opened.json  check__started.json  report.json  report__completed.json
tests/: conftest.py  settings.py  test_admin.py  test_api.py  test_data.py  test_decorators.py  test_helpers.py  test_integration.py  test_models.py  test_settings.py  test_views.py  urls.py
tests/test_app/: __init__.py  apps.py
tests/test_app/migrations/: 0001_initial.py
tests/test_models/: test_applicant.py  test_base.py  test_check.py  test_event.py  test_report.py
