[tool.poetry]
name = "django-onfido"
version = "2.1"
description = "Django app for integration with Onfido."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.rst"
homepage = "https://github.com/yunojuno/django-onfido"
repository = "https://github.com/yunojuno/django-onfido"
documentation = "https://github.com/yunojuno/django-onfido"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "onfido" }
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1 || ^ 4.0"
python-dateutil = "*"
requests =  "*"
simplejson = "*"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
coverage = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-blind-except = "*"
flake8-docstrings = "*"
flake8-logging-format = "*"
flake8-print = "*"
freezegun = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"
types-requests = "*"
types-python-dateutil = "*"
types-simplejson = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
